<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_faculty"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.netbucket.studymate.fragments.FacultyMemberDashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_faculty_member_dashboard" />

    <fragment
        android:id="@+id/navigation_chats"
        android:name="com.netbucket.studymate.fragments.FacultyMemberChatsFragment"
        android:label="@string/title_chats"
        tools:layout="@layout/fragment_faculty_member_chats" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.netbucket.studymate.fragments.FacultyMemberNotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_faculty_faculty_member_notifications" />

</navigation>